@@ -1,6 +1,7 @@
 v1.3beta
 * Added "preamble" option to tcp interfaces
 * Fixed bugs in failover specification parsing
+* Added udp: interface type
 
 v1.2: January 6th 2015
 * eol=n now optional on other interface types
